@@ -1,3 +1,7 @@
+Fri Nov 18 20:17:22 CET 2011
+	Fixing return value of MHD_get_timeout if timeouts are not in use.
+        (#1914). -rboulton
+
 Sun Nov 13 13:34:29 CET 2011
 	Trying to fix accidental addition of a "Connection: close" footer
 	under certain (rare) circumstances. -CG
